EARTH-559-firefox-menu: fixing z-index issue on video heros (#100)

--- a/patterns/molecules/hero-banner/scss/hero-banner.component.scss
+++ b/patterns/molecules/hero-banner/scss/hero-banner.component.scss
@@ -104,7 +104,7 @@ $hero-max-width: 1380px;
   &.has-video {
     .hero-banner__inner {
       position: absolute;
-      z-index: 10;
+      z-index: 2;
       width: 100%;
       height: 100%;
       top: 0;
